Bug 1572829 - Remove explicit children too when node has a shadow root. r=Jamie

Differential Revision: https://phabricator.services.mozilla.com/D43488